# neural_network

./: .gitmodules  CMakeLists.txt  README.md
examples/: mnist_trainer.cpp
src/: CMakeLists.txt  include_eigen.h  layer.cpp  layer.h  neural_network.cpp  neural_network.h  neural_network_builder.cpp  neural_network_builder.h  training_layer.cpp  training_layer.h
src/activation_functions/: ReLu.cpp  ReLu.h  activation_function.cpp  activation_function.h  sigmoid.cpp  sigmoid.h
src/loss_functions/: loss_function.cpp  loss_function.h  square_error.cpp  square_error.h
src/utils/: guard.h  random.cpp  random.h
